--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -54,4 +54,18 @@ data:
 {{- end }}
 
 
-# TODO: OIDS secrets in chart
+---
+# ===================================================================
+#  Secret for Rucio Server OIDC Client Credentials
+# ===================================================================
+{{- if .Values.oidcCredentials.clientSecret }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: rucio-oidc-secret
+type: Opaque
+data:
+  # These will be the filenames inside the mounted volume
+  oidc_client_id: {{ .Values.oidcCredentials.clientId | b64enc }}
+  oidc_client_secret: {{ .Values.oidcCredentials.clientSecret | b64enc }}
+{{- end }}
