--- a/rucio-xlzd/templates/client-configmap.yaml
+++ b/rucio-xlzd/templates/client-configmap.yaml
@@ -45,13 +45,10 @@ data:
 
     echo "Setting RSE protocol using OIDC implementation..."
     
-    # --- THIS IS THE FIX ---
-    # We are using 'oidc.Default' instead of 'gfal.Default'
-    # This implementation is built to read the 'oidc_*' attributes.
     rucio rse protocol add "$RSE_NAME" --host "xlzd-data.boulby.ac.uk" --scheme root \
       --port 1094 \
       --prefix "/" \
-      --impl "rucio.rse.protocols.oidc.Default" \
+      --impl "rucio.rse.protocols.gfal.Default" \
       --domain-json '{"wan": {"read": 1, "write": 1, "delete": 1, "third_party_copy_read": 1}, "lan": {"read": 1, "write": 1, "delete": 1}}'
 
     echo "Setting RSE attributes for OIDC authentication..."
