--- a/rucio-xlzd/templates/client-configmap.yaml
+++ b/rucio-xlzd/templates/client-configmap.yaml
@@ -43,18 +43,18 @@ data:
     echo "Attempting to delete old protocol (if exists)..."
     rucio rse protocol delete "$RSE_NAME" --scheme root --hostname "xlzd-data.boulby.ac.uk" --port 1094 || true
 
-    echo "Setting RSE protocol using OIDC implementation..."
+    echo "Setting RSE protocol using xrootd.Default implementation..."
     
     rucio rse protocol add "$RSE_NAME" --host "xlzd-data.boulby.ac.uk" --scheme root \
       --port 1094 \
       --prefix "/" \
-      --impl "rucio.rse.protocols.gfal.Default" \
+      --impl "rucio.rse.protocols.xrootd.Default" \
       --domain-json '{"wan": {"read": 1, "write": 1, "delete": 1, "third_party_copy_read": 1}, "lan": {"read": 1, "write": 1, "delete": 1}}'
 
     echo "Setting RSE attributes for OIDC authentication..."
     
+    # The xrootd.Default protocol should still read these OIDC attributes
     rucio rse attribute delete "$RSE_NAME" auth_token || true
-    
     rucio rse attribute add "$RSE_NAME" --key "oidc_issuer" --value "https://xlzd-iam.boulby.ac.uk/"
     rucio rse attribute add "$RSE_NAME" --key "oidc_client_id_path" --value "/opt/rucio/etc/oidc/oidc_client_id"
     rucio rse attribute add "$RSE_NAME" --key "oidc_client_secret_path" --value "/opt/rucio/etc/oidc/oidc_client_secret"
