--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -7,7 +7,6 @@ data:
   db-password: {{ .Values.rucio.server.db_password | b64enc }}
 
 ---
-# Secret for the Rucio Server's host certificate and key ONLY
 apiVersion: v1
 kind: Secret
 metadata:
@@ -18,7 +17,6 @@ data:
   hostkey.pem: {{ (.Files.Get "certificates/hostkey.pem") | b64enc }}
 
 ---
-# Secret for the Rucio Client's x509 certificate and key ONLY
 apiVersion: v1
 kind: Secret
 metadata:
@@ -29,8 +27,6 @@ data:
   userkey.pem: {{ (.Files.Get "certificates/userkey.pem") | b64enc }}
 
 ---
-# OPTIONAL: If you want Helm to manage the CA secret automatically
-# Secret for the CA certificate and its hash link
 apiVersion: v1
 kind: Secret
 metadata:
@@ -40,10 +36,9 @@ data:
   ca.pem: {{ (.Files.Get "certificates/ca.pem") | b64enc }}
   209843b3.0: {{ (.Files.Get "certificates/209843b3.0") | b64enc }}
 
-
 ---
 # ===================================================================
-#  Secret for Rucio Server OIDC Client Credentials
+#  Secret for Rucio OIDC idpsecrets.json
 # ===================================================================
 {{- if .Values.oidcCredentials.clientSecret }}
 apiVersion: v1
@@ -51,8 +46,16 @@ kind: Secret
 metadata:
   name: rucio-oidc-secret
 type: Opaque
-data:
-  # These will be the filenames inside the mounted volume
-  oidc_client_id: {{ .Values.oidcCredentials.clientId | b64enc }}
-  oidc_client_secret: {{ .Values.oidcCredentials.clientSecret | b64enc }}
+stringData:
+  # Rucio requires a JSON file for OIDC providers
+  idpsecrets.json: |
+    {
+      "{{ .Values.oidcCredentials.adminIssuer }}": {
+        "client_id": "{{ .Values.oidcCredentials.clientId }}",
+        "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
+        "issuer": "{{ .Values.oidcCredentials.issuerUrl }}",
+        "redirect_uri": "{{ .Values.oidcCredentials.redirectUri }}",
+        "scope": "openid profile offline_access"
+      }
+    }
 {{- end }}
