Change RSE protocol implementation to WebDAV

--- a/rucio-xlzd/templates/client-configmap.yaml
+++ b/rucio-xlzd/templates/client-configmap.yaml
@@ -51,7 +51,7 @@ data:
     rucio rse protocol add "$RSE_NAME" --host "xlzd-data.boulby.ac.uk" --scheme root \
       --port 1094 \
       --prefix "/" \
-      --impl "rucio.rse.protocols.xrootd.Default" \
+      --impl "rucio.rse.protocols.webdav.Default" \
       --domain-json '{"wan": {"read": 1, "write": 1, "delete": 1, "third_party_copy_read": 1}, "lan": {"read": 1, "write": 1, "delete": 1}}'
 
     echo "Setting RSE attributes for OIDC authentication..."
