--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -48,6 +48,7 @@ metadata:
 type: Opaque
 stringData:
   # Rucio requires a JSON file for OIDC providers
+  # FIX: We need BOTH the specific issuer key AND the 'default' key
   idpsecrets.json: |
     {
       "{{ .Values.oidcCredentials.adminIssuer }}": {
@@ -55,7 +56,14 @@ stringData:
         "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
         "issuer": "{{ .Values.oidcCredentials.issuerUrl }}",
         "redirect_uri": "{{ .Values.oidcCredentials.redirectUri }}",
-        "scope": "openid profile offline_access"
+        "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups"
+      },
+      "default": {
+        "client_id": "{{ .Values.oidcCredentials.clientId }}",
+        "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
+        "issuer": "{{ .Values.oidcCredentials.issuerUrl }}",
+        "redirect_uri": "{{ .Values.oidcCredentials.redirectUri }}",
+        "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups"
       }
     }
 {{- end }}
