--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -54,16 +54,30 @@ stringData:
       "{{ .Values.oidcCredentials.adminIssuer }}": {
         "client_id": "{{ .Values.oidcCredentials.clientId }}",
         "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
-        "issuer": "https://xlzd-iam.boulby.ac.uk",
+        "issuer": "{{ .Values.oidcCredentials.oidcIssuer }}",
         "redirect_uri": "{{ .Values.oidcCredentials.redirectUri }}",
-        "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups"
+        "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups",
+        "SCIM": {
+          "client_id": "{{ .Values.oidcCredentials.clientId }}",
+          "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
+          "issuer": "{{ .Values.oidcCredentials.oidcIssuer }}",
+          "redirect_uri": "{{ .Values.oidcCredentials.redirectUri }}",
+          "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups"
+        }
       },
       "default": {
         "client_id": "{{ .Values.oidcCredentials.clientId }}",
         "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
-        "issuer": "https://xlzd-iam.boulby.ac.uk",
+        "issuer": "{{ .Values.oidcCredentials.oidcIssuer }}",
         "redirect_uri": "{{ .Values.oidcCredentials.redirectUri }}",
-        "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups"
+        "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups",
+        "SCIM": {
+          "client_id": "{{ .Values.oidcCredentials.clientId }}",
+          "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
+          "issuer": "{{ .Values.oidcCredentials.oidcIssuer }}",
+          "redirect_uri": "{{ .Values.oidcCredentials.redirectUri }}",
+          "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups"
+        }
       }
     }
 {{- end }}
