--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -55,13 +55,17 @@ stringData:
         "client_id": "{{ .Values.oidcCredentials.clientId }}",
         "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
         "issuer": "{{ .Values.oidcCredentials.oidcIssuer }}",
-        "redirect_uri": "{{ .Values.oidcCredentials.redirectUri }}",
+        "redirect_uris": [
+          "{{ .Values.oidcCredentials.redirectUri }}"
+        ],
         "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups",
         "SCIM": {
           "client_id": "{{ .Values.oidcCredentials.clientId }}",
           "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
           "issuer": "{{ .Values.oidcCredentials.oidcIssuer }}",
-          "redirect_uri": "{{ .Values.oidcCredentials.redirectUri }}",
+          "redirect_uris": [
+            "{{ .Values.oidcCredentials.redirectUri }}"
+          ],
           "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups"
         }
       },
@@ -69,13 +73,17 @@ stringData:
         "client_id": "{{ .Values.oidcCredentials.clientId }}",
         "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
         "issuer": "{{ .Values.oidcCredentials.oidcIssuer }}",
-        "redirect_uri": "{{ .Values.oidcCredentials.redirectUri }}",
+        "redirect_uris": [
+          "{{ .Values.oidcCredentials.redirectUri }}"
+        ],
         "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups",
         "SCIM": {
           "client_id": "{{ .Values.oidcCredentials.clientId }}",
           "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
           "issuer": "{{ .Values.oidcCredentials.oidcIssuer }}",
-          "redirect_uri": "{{ .Values.oidcCredentials.redirectUri }}",
+          "redirect_uris": [
+            "{{ .Values.oidcCredentials.redirectUri }}"
+          ],
           "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups"
         }
       }
