--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -54,7 +54,7 @@ stringData:
       "{{ .Values.oidcCredentials.adminIssuer }}": {
         "client_id": "{{ .Values.oidcCredentials.clientId }}",
         "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
-        "issuer": "{{ .Values.oidcCredentials.oidcIssuer }}",
+        "issuer": "{{ .Values.oidcCredentials.issuerUrl }}",
         "redirect_uris": [
           "{{ .Values.oidcCredentials.redirectUri }}"
         ],
@@ -62,7 +62,7 @@ stringData:
         "SCIM": {
           "client_id": "{{ .Values.oidcCredentials.clientId }}",
           "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
-          "issuer": "{{ .Values.oidcCredentials.oidcIssuer }}",
+          "issuer": "{{ .Values.oidcCredentials.issuerUrl }}",
           "redirect_uris": [
             "{{ .Values.oidcCredentials.redirectUri }}"
           ],
@@ -72,7 +72,7 @@ stringData:
       "default": {
         "client_id": "{{ .Values.oidcCredentials.clientId }}",
         "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
-        "issuer": "{{ .Values.oidcCredentials.oidcIssuer }}",
+        "issuer": "{{ .Values.oidcCredentials.issuerUrl }}",
         "redirect_uris": [
           "{{ .Values.oidcCredentials.redirectUri }}"
         ],
@@ -80,7 +80,7 @@ stringData:
         "SCIM": {
           "client_id": "{{ .Values.oidcCredentials.clientId }}",
           "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
-          "issuer": "{{ .Values.oidcCredentials.oidcIssuer }}",
+          "issuer": "{{ .Values.oidcCredentials.issuerUrl }}",
           "redirect_uris": [
             "{{ .Values.oidcCredentials.redirectUri }}"
           ],
