oidc_code redirect uri

--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -56,7 +56,8 @@ stringData:
         "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
         "issuer": "{{ .Values.oidcCredentials.issuerUrl }}",
         "redirect_uris": [
-          "{{ .Values.oidcCredentials.redirectUri }}"
+          "{{ .Values.oidcCredentials.redirectUri }}",
+          "https://rucio-service/auth/oidc_code"
         ],
         "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups",
         "SCIM": {
@@ -64,7 +65,8 @@ stringData:
           "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
           "issuer": "{{ .Values.oidcCredentials.issuerUrl }}",
           "redirect_uris": [
-            "{{ .Values.oidcCredentials.redirectUri }}"
+            "{{ .Values.oidcCredentials.redirectUri }}",
+            "https://rucio-service/auth/oidc_code"
           ],
           "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups"
         }
@@ -74,7 +76,8 @@ stringData:
         "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
         "issuer": "{{ .Values.oidcCredentials.issuerUrl }}",
         "redirect_uris": [
-          "{{ .Values.oidcCredentials.redirectUri }}"
+          "{{ .Values.oidcCredentials.redirectUri }}",
+          "https://rucio-service/auth/oidc_code"
         ],
         "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups",
         "SCIM": {
@@ -82,7 +85,8 @@ stringData:
           "client_secret": "{{ .Values.oidcCredentials.clientSecret }}",
           "issuer": "{{ .Values.oidcCredentials.issuerUrl }}",
           "redirect_uris": [
-            "{{ .Values.oidcCredentials.redirectUri }}"
+            "{{ .Values.oidcCredentials.redirectUri }}",
+            "https://rucio-service/auth/oidc_code"
           ],
           "scope": "openid profile offline_access storage.read:/ storage.create:/ storage.modify:/ wlcg wlcg.groups"
         }
